Renamed. Few changes

--- a/languages/en-GB/en-GB.mod_showmd5salthash.ini
+++ b/languages/en-GB/en-GB.mod_showmd5salthash.ini
@@ -5,4 +5,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_SHOWMD5SALTHASH="MD5 Hash Salt"
-MOD_SHOWMD5SALTHASH_XML_DESCRIPTION="Modulo que exite o Hash de MD5 com salt de uma string"
+MOD_SHOWMD5SALTHASH_XML_DESCRIPTION="Module that just show MD5 with Salt hash of one string"
