--- a/languages/en-GB/en-GB.mod_showmd5salthash.sys.ini
+++ b/languages/en-GB/en-GB.mod_showmd5salthash.sys.ini
@@ -1,8 +1,8 @@
-; Mod_showmd5salthash
+; Mod_jcbr
 ; Author:            Emerson Rocha Luiz ( emerson@webdesign.eng.br - @fititnt -  http://fititnt.org )
 ; Copyright          Copyright (C) 2011 Joomla! Coders Brazil ( @JCoderBR - http://jcoder.org )
 ; Llicense           GPL3
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_SHOWMD5SALTHASH="MD5 Hash Salt"
-MOD_SHOWMD5SALTHASH_XML_DESCRIPTION="Modulo que exite o Hash de MD5 com salt de uma string"
+MOD_SHOWMD5HASHSALT="MD5 Hash Salt"
+MOD_SHOWMD5HASHSALT_XML_DESCRIPTION="Module that just show MD5 with Salt hash of one string"
