--- a/languages/en-GB/en-GB.mod_showmd5salthash.ini
+++ b/languages/en-GB/en-GB.mod_showmd5salthash.ini
@@ -4,5 +4,14 @@
 ; Llicense           GPL3
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_SHOWMD5SALTHASH="MD5 Hash Salt"
-MOD_SHOWMD5SALTHASH_XML_DESCRIPTION="Module that just show MD5 with Salt hash of one string"
+MOD_SHOWMD5HASHSALT="MD5 Hash Salt"
+MOD_SHOWMD5HASHSALT_XML_DESCRIPTION="Module that just show MD5 with Salt hash of one string"
+MOD_SHOWMD5SALTHASH_DEFALT_PASSWORD="Secret"
+MOD_SHOWMD5SALTHASH_SHOW_MORE_OPTIONS_LABEL="Show more options"
+MOD_SHOWMD5SALTHASH_SHOW_MORE_OPTIONS_DESC="Show more options about criptograty"
+MOD_SHOWMD5SALTHASH_RESULT="Result"
+MOD_SHOWMD5SALTHASH_SEND="Send"
+MOD_SHOWMD5SALTHASH_MD5WITHSALT="MD5+Salt"
+MOD_SHOWMD5SALTHASH_MD5_ENCODED="MD5"
+MOD_SHOWMD5SALTHASH_BASE64_ENCODED="Base64"
+MOD_SHOWMD5SALTHASH_CRYPT_ENCODED="Crypt"
