--- a/languages/en-GB/en-GB.mod_showmd5salthash.sys.ini
+++ b/languages/en-GB/en-GB.mod_showmd5salthash.sys.ini
@@ -1,4 +1,4 @@
-; Mod_jcbr
+; Mod_showmd5salthash
 ; Author:            Emerson Rocha Luiz ( emerson@webdesign.eng.br - @fititnt -  http://fititnt.org )
 ; Copyright          Copyright (C) 2011 Joomla! Coders Brazil ( @JCoderBR - http://jcoder.org )
 ; Llicense           GPL3
@@ -6,3 +6,12 @@
 
 MOD_SHOWMD5HASHSALT="MD5 Hash Salt"
 MOD_SHOWMD5HASHSALT_XML_DESCRIPTION="Module that just show MD5 with Salt hash of one string"
+MOD_SHOWMD5SALTHASH_DEFALT_PASSWORD="Secret"
+MOD_SHOWMD5SALTHASH_SHOW_MORE_OPTIONS_LABEL="Show more options"
+MOD_SHOWMD5SALTHASH_SHOW_MORE_OPTIONS_DESC="Show more options about criptograty"
+MOD_SHOWMD5SALTHASH_RESULT="Result"
+MOD_SHOWMD5SALTHASH_SEND="Send"
+MOD_SHOWMD5SALTHASH_MD5WITHSALT="MD5+Salt"
+MOD_SHOWMD5SALTHASH_MD5_ENCODED="MD5"
+MOD_SHOWMD5SALTHASH_BASE64_ENCODED="Base64"
+MOD_SHOWMD5SALTHASH_CRYPT_ENCODED="Crypt"
